<resources>

    <string name="app_name">TextChatApp</string>


    <string name="title_Start">TextChatApp</string>
    <string name="loginButtonText_Start">Login</string>
    <string name="registerButtonText_Start">Register</string>


    <string name="messageHint_message">Type your message</string>


    <string name="usernameHint_Register">Username</string>
    <string name="emailHint_Register">E-mail</string>
    <string name="passwordHint_Register">Password</string>
    <string name="createAccount_Register">Create a New Account</string>
    <string name="buttonText_Register">Register</string>


    <string name="emailHint_Login">E-mail</string>
    <string name="passwordHint_Login">Password</string>
    <string name="account_Login">Login to Your Account</string>
    <string name="buttonText_Login">Login</string>
    <string name="forgotPasswordText_Login">Forgot Password?</string>


    <string name="titleText_ResetPassword">Please enter your registered e-mail id and click RESET.
                                            You will receive a mail on the provided e-mail id </string>
    <string name="emailHint_ResetPassword">E-mail</string>
    <string name="buttonText_ResetPassword">Reset</string>


    <string name="logoutItemText_MainMenu">Logout</string>


    <string name="default_notification_channel_id">Notification Channel</string>
    <string name="default_notification_channel_name">Chatter</string>


</resources>