<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/bar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/toolbar_layout"
        android:padding="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount_Register"
            android:textSize="25sp"
            android:textStyle="bold" />

<!-- deepali_syntaxError: android:met_floatingLabel
     correction: app:met_floatingLabel
-->

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_register"
            android:layout_marginTop="30dp"
            app:met_floatingLabel="normal"
            android:hint="@string/usernameHint_Register" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_register"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="@string/emailHint_Register" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_register"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            android:hint="@string/passwordHint_Register" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/buttonText_Register"
            android:textColor="#ffffff"
            app:backgroundTint="@color/colorBrightTaint" />

    </LinearLayout>

</RelativeLayout>