<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Start"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton_Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="20dp"
        android:text="@string/loginButtonText_Start"
        android:textColor="#ffffff"
        app:backgroundTint="@color/colorBrightTaint" />

    <Button
        android:id="@+id/registerButton_Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/registerButtonText_Start"
        android:textColor="#ffffff"
        app:backgroundTint="@color/colorBrightTaint" />

</LinearLayout>