<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/titleText_ResetPassword"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/email_resetPassword"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="@string/emailHint_ResetPassword" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/buttonText_ResetPassword"
            android:textColor="#ffffff"
            app:backgroundTint="@color/colorBrightTaint" />

    </LinearLayout>

</LinearLayout>